--- a/modules/aws_secret_manager/default/0.1/facets.yaml
+++ b/modules/aws_secret_manager/default/0.1/facets.yaml
@@ -13,7 +13,6 @@ spec:
       type: boolean
       title: Override Default Name
       description: Set it to true if secret is to be created with custom name
-      default: false
     override_name:
       type: string
       title: Override Name
@@ -22,34 +21,13 @@ spec:
       pattern: ^[a-zA-Z0-9/_+=.@-]+$
       x-ui-placeholder: Enter the custom name
       x-ui-error-message: Value doesn't match the format eg. facets-secret
-      x-ui-visible-if:
-        field: spec.override_default_name
-        values:
-        - true
     secrets:
       title: Secrets
       type: object
-      description: Configure secret key-value pairs
-      properties:
-        secret_1_key:
-          type: string
-          title: Secret Key 1
-          description: Name of the first secret
-        secret_1_value:
-          type: string
-          title: Secret Value 1
-          description: Value of the first secret
-        secret_2_key:
-          type: string
-          title: Secret Key 2
-          description: Name of the second secret
-        secret_2_value:
-          type: string
-          title: Secret Value 2
-          description: Value of the second secret
-  required:
-  - override_default_name
-  - secrets
+      description: 'Enter a valid key-value pair for secrets in YAML format. Eg. key:
+        value (provide a space after '':'' as expected in the YAML format)'
+      x-ui-yaml-editor: true
+      x-ui-placeholder: 'Enter the value of the secret. Eg. key1: value1'
 sample:
   kind: aws_secret_manager
   flavor: default
