--- a/modules/prometheus/k8s/0.1/facets.yaml
+++ b/modules/prometheus/k8s/0.1/facets.yaml
@@ -6,9 +6,9 @@ inputs:
       resource_type: kubernetes_cluster
       resource_name: default
     providers:
-      - kubernetes
-      - kubernetes-alpha
-      - helm
+    - kubernetes
+    - kubernetes-alpha
+    - helm
 outputs:
   default:
     type: '@outputs/prometheus'
@@ -18,10 +18,10 @@ flavor: k8s
 description: Prometheus monitoring stack for Kubernetes with Grafana, Alertmanager,
   and kube-state-metrics
 clouds:
-  - aws
-  - azure
-  - gcp
-  - kubernetes
+- aws
+- azure
+- gcp
+- kubernetes
 spec:
   title: Prometheus Stack
   description: Specification of the Prometheus stack
@@ -36,7 +36,8 @@ spec:
     values:
       type: object
       title: Custom Values
-      description: Additional values to pass to the Prometheus helm chart in YAML format
+      description: Additional values to pass to the Prometheus helm chart in YAML
+        format
       default: '{}'
       x-ui-yaml-editor: true
       x-ui-placeholder: Enter values in YAML format
@@ -59,8 +60,8 @@ spec:
               title: Label Value
               description: Value for the node selector label
           required:
-            - key
-            - value
+          - key
+          - value
     tolerations:
       type: object
       title: Tolerations
@@ -86,7 +87,7 @@ spec:
           x-ui-visible-if:
             field: spec.operator.enabled
             values:
-              - true
+            - true
           type: object
           title: Operator Size
           description: Resource sizing configuration for the Prometheus operator
@@ -153,7 +154,7 @@ spec:
           x-ui-visible-if:
             field: spec.prometheus.enabled
             values:
-              - true
+            - true
           x-ui-placeholder: e.g., 100d, 24h, 1440m
         size:
           type: object
@@ -163,7 +164,7 @@ spec:
           x-ui-visible-if:
             field: spec.prometheus.enabled
             values:
-              - true
+            - true
           properties:
             volume:
               type: string
@@ -233,7 +234,7 @@ spec:
           x-ui-visible-if:
             field: spec.grafana.enabled
             values:
-              - true
+            - true
           properties:
             resources:
               type: object
@@ -296,7 +297,7 @@ spec:
           x-ui-visible-if:
             field: spec.alertmanager.enabled
             values:
-              - true
+            - true
           properties:
             volume:
               type: string
@@ -368,7 +369,7 @@ spec:
           x-ui-visible-if:
             field: spec.kube-state-metrics.enabled
             values:
-              - true
+            - true
           x-ui-override-disable: true
         size:
           type: object
@@ -377,7 +378,7 @@ spec:
           x-ui-visible-if:
             field: spec.kube-state-metrics.enabled
             values:
-              - true
+            - true
           properties:
             resources:
               type: object
@@ -423,16 +424,16 @@ spec:
                       pattern: ^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$
                       default: 512Mi
   x-ui-order:
-    - namespace
-    - operator
-    - enable_crds
-    - prometheus
-    - alertmanager
-    - grafana
-    - kube-state-metrics
-    - node_selector
-    - tolerations
-    - values
+  - namespace
+  - operator
+  - enable_crds
+  - prometheus
+  - alertmanager
+  - grafana
+  - kube-state-metrics
+  - node_selector
+  - tolerations
+  - values
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/prometheus/prometheus.schema.json
   flavor: k8s
@@ -502,4 +503,4 @@ sample:
             memory: 512Mi
 iac:
   validated_files:
-    - variables.tf
+  - variables.tf
