--- a/modules/grafana_dashboard/default/0.1/facets.yaml
+++ b/modules/grafana_dashboard/default/0.1/facets.yaml
@@ -7,6 +7,10 @@ clouds:
 - gcp
 - azure
 - kubernetes
+spec:
+  type: object
+  title: Grafana Dashboard Configuration
+  description: Configuration for a Grafana dashboard, including panels, data sources, and layout.
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/grafana_dashboard/grafana_dashboard.schema.json
   kind: grafana_dashboard
