--- a/modules/alert_group/default/0.1/facets.yaml
+++ b/modules/alert_group/default/0.1/facets.yaml
@@ -105,7 +105,7 @@ sample:
         labels:
           team: stack_owner
         annotations:
-          k1: v1
+          sample: This is a sample annotation
       StatefulSetNonReadyPods1:
         expr: kube_statefulset_status_replicas_ready != kube_statefulset_status_replicas
         message: StatefuleSet has non-ready pods for longer than a 15m
@@ -114,7 +114,7 @@ sample:
         labels:
           team: stack_owner
         annotations:
-          k2: v2
+          sample: This is a sample annotation
         severity: warning
         resource_name: '{{ $labels.statefulset }}'
         resource_type: statefulset
