Update facets.yaml disabled to true

--- a/modules/alert_group/default/0.1/facets.yaml
+++ b/modules/alert_group/default/0.1/facets.yaml
@@ -91,7 +91,7 @@ sample:
   kind: alert_group
   flavor: default
   version: '0.1'
-  disabled: false
+  disabled: true
   metadata: {}
   spec:
     disabled: false
